// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  max-width: 85px;
}

.c1 + .c0 {
  margin-left: 16px;
}

.c2 {
  height: 32px;
  min-width: 8px;
  background: #007;
}

.c3 {
  font-size: 12px;
  margin-left: 10px;
}

<div
  className="c0 c1"
>
  <div
    className="c2"
    color="#007"
  />
  <span
    className="c3"
  >
    Chart Legend
  </span>
</div>
`;

exports[`renders correctly with color prop 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  max-width: 85px;
}

.c1 + .c0 {
  margin-left: 16px;
}

.c2 {
  height: 32px;
  min-width: 8px;
  background: repeating-linear-gradient(to bottom,#CCCCCC,#CCCCCC 15%,transparent 15%,transparent 20%);
}

.c3 {
  font-size: 12px;
  margin-left: 10px;
}

<div
  className="c0 c1"
>
  <div
    className="c2"
    color="#CCCCCC"
  />
  <span
    className="c3"
  >
    Chart Legend
  </span>
</div>
`;

exports[`renders correctly with dashed prop 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  max-width: 85px;
}

.c1 + .c0 {
  margin-left: 16px;
}

.c2 {
  height: 32px;
  min-width: 8px;
  background: repeating-linear-gradient(to bottom,#007,#007 15%,transparent 15%,transparent 20%);
}

.c3 {
  font-size: 12px;
  margin-left: 10px;
}

<div
  className="c0 c1"
>
  <div
    className="c2"
    color="#007"
  />
  <span
    className="c3"
  >
    Chart Legend
  </span>
</div>
`;
